# TinyGameEngine

./: .clang-format  .gitignore  CMakeLists.txt
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  EngineConfig.cpp  EngineConfig.h  EngineContext.cpp  EngineContext.h  EngineVisitor.cpp  EngineVisitor.h  RandomManager.cpp  SaveManager.cpp  TimeManager.cpp  TimeManager.h  main.cpp
Engine/Content/: config.json
Engine/include/Engine/Core/: Engine.h  EngineConfig.h  EngineContext.h  EngineVisitor.h
Engine/include/Engine/Managers/: AudioManager.h  ClipboardManager.h  CursorManager.h  GuiManager.h  InputManager.h  RandomManager.h  RenderManager.h  ResourceManager.h  SaveManager.h  SceneManager.h  ScreenshotManager.h
Engine/include/Engine/Scene/: Scene.h
Engine/include/Engine/Utils/: InputBinding.h  Logger.h
Engine/src/Core/: Engine.cpp  EngineConfig.cpp  EngineContext.cpp  EngineVisitor.cpp
Engine/src/Managers/: AudioManager.cpp  ClipboardManager.cpp  CursorManager.cpp  GuiManager.cpp  InputManager.cpp  RandomManager.cpp  RenderManager.cpp  ResourceManager.cpp  SaveManager.cpp  SceneManager.cpp  ScreenshotManager.cpp  TimeManager.cpp
Engine/src/Utils/: InputBinding.cpp
Games/: CMakeLists.txt
